# mnn_example

./: CMakeLists.txt  README.md
data/models/: db  mobilefacenet.mnn  zqlandmark.mnn
include/MNN/: VCS.h
src/: CMakeLists.txt  classifier.cpp  classifier.h  main.cpp  vision_engine.cpp  vision_engine.h
src/classifier/: classifier.cpp  classifier.h  test_classifier.cpp
src/common/: common.cpp  common.h
src/face/: face_engine.cpp  face_engine.h  test_face.cpp
src/face/aligner/: aligner.cpp  aligner.h
src/face/detecter/: detecter.cpp  detecter.h
src/face/detecter/centerface/: centerface.cpp  centerface.h
src/face/detecter/ultraface/: ultraface.cpp  ultraface.h
src/face/landmarker/: landmarker.cpp  landmarker.h
src/face/landmarker/pfldlandmarker/: pfldlandmarker.cpp  pfldlandmarker.h
src/face/landmarker/zqlandmarker/: zqlandmarker.cpp  zqlandmarker.h
src/face/recognizer/: recognizer.cpp  recognizer.h
src/face/recognizer/mobilefacenet/: mobilefacenet.cpp  mobilefacenet.h
src/object/: mobilenetssd.cpp  mobilenetssd.h  object_engine.cpp  object_engine.h  test_object.cpp
src/object/mobilenetssd/: mobilenetssd.cpp  mobilenetssd.h
